# axum-lambda

./: .gitignore  .terraform.lock.hcl  Cargo.toml  main.tf
src/: main.rs
