[package]
name = "axum-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
axum-aws-lambda = "0.3.0"
http = "0.2.8"
hyper = "0.14.23"
lambda_http = "0.7.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
